tests/tooling/fixtures/native/recovery/negative/negative_global_initializer_self_reference.objc3
// Expected diagnostic code(s): O3S210.
module NegativeGlobalInitializerSelfReference;

let seed = seed + 1;

fn main() -> i32 {
  return 0;
}
